--- a/src/components/Palette/Palette.scss
+++ b/src/components/Palette/Palette.scss
@@ -8,4 +8,22 @@
   @media screen and (max-width: $screen-break) {
     border-radius: 0;
   }
+
+  margin: 0 10em 0;
+  display: grid;
+  grid-template-columns: 6em 0.3em auto;
+  grid-template-rows: auto;
+  grid-template-areas: 'color-swatch ... colorboard';
+
+  @media screen and (max-width: $screen-break) {
+    margin: 0;
+  }
+
+  &__color-swatch {
+    grid-area: color-swatch;
+  }
+
+  &__colorboard {
+    grid-area: colorboard;
+  }
 }
