--- a/src/components/Palette/ColorSwatch/ColorSwatch.scss
+++ b/src/components/Palette/ColorSwatch/ColorSwatch.scss
@@ -12,17 +12,24 @@
   @include paletteFirstLayer();
 
   &__color {
+    @include stitched();
+    @include aberredText(0.5px);
+
     z-index: 20;
     position: relative;
-    @include stitched();
     padding: 0 0.3em;
-    @include aberredText(0.5px);
+
+    line-height: 0.8em;
+
+    display: flex;
   }
 
   &__color--primary {
+    align-items: flex-end;
   }
 
   &__color--secondary {
+    align-items: flex-start;
     border-radius: 0 0 0.4em 0.4em;
   }
 }
