little restructuring, add utilities/helpers, primitive painting

--- a/src/components/Palette/components/ColorSwatch/ColorSwatch.scss
+++ b/src/components/Palette/components/ColorSwatch/ColorSwatch.scss
@@ -1,4 +1,4 @@
-@import '../../../utilities/variables';
+@import '../../../../utilities/variables';
 
 .palette__color-swatch {
   background: #fff;
