--- a/src/components/Palette/components/NewPaint/NewPaint.scss
+++ b/src/components/Palette/components/NewPaint/NewPaint.scss
@@ -1,4 +1,4 @@
-@import '../../../utilities/variables';
+@import '../../../../utilities/variables';
 
 .palette__paintboard__new-paint {
   height: 2em;
