--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -4,7 +4,6 @@
   --tile-size: 20px;
   --width-in-tiles: 40;
   --height-in-tiles: 20;
-  background: cyan;
 
   justify-self: center;
   align-self: center;
@@ -15,4 +14,10 @@
   display: grid;
   grid-template-columns: repeat(var(--width-in-tiles), 1fr);
   grid-template-rows: repeat(var(--height-in-tiles), 1fr);
+
+  &__tile {
+    padding: 0;
+    height: calc(var(--tile-size) * 1px);
+    width: calc(var(--tile-size) * 1px);
+  }
 }
